Fix overflowing calendar titles in <CalendarSelector> in IE
http://stackoverflow.com/questions/38850365/css-truncation-with-flexbox-ie-10-11

--- a/src/CalendarSelector.css
+++ b/src/CalendarSelector.css
@@ -84,4 +84,5 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  flex: 0 1 auto;
 }
